--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:background="@color/color_back_ground"
     android:layout_height="match_parent"
     android:padding="14dp"
-    tools:context=".activity.settings.SettingsActivity">
+    tools:context=".activity.SettingsActivity">
 
     <ImageView
         android:id="@+id/btnBack"
