--- a/app/src/main/res/layout/bottom_sheet_change_info.xml
+++ b/app/src/main/res/layout/bottom_sheet_change_info.xml
@@ -39,7 +39,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="10dp"
         android:id="@+id/imgUserUpdate"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="140dp"
         android:src="@drawable/img" />
 
@@ -109,6 +109,7 @@
         android:fontFamily="@font/metropolis_medium"
         android:layout_alignParentStart="true"
         android:elevation="4dp"
+        android:textSize="16sp"
         android:layout_alignParentTop="true"
         android:background="@drawable/bg_border_red"
         android:layout_centerHorizontal="true"
