--- a/app/src/main/res/layout/bottom_sheet_change_password.xml
+++ b/app/src/main/res/layout/bottom_sheet_change_password.xml
@@ -61,6 +61,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
+        android:id="@+id/gotoForgot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
