--- a/app/src/main/res/layout/activity_addresses.xml
+++ b/app/src/main/res/layout/activity_addresses.xml
@@ -47,4 +47,17 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/textView22"
         android:layout_marginTop="20dp" />
+    <TextView
+        android:id="@+id/tvNotification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="250dp"
+        android:visibility="gone"
+        android:fontFamily="@font/metropolis_semi_bold"
+        android:gravity="center"
+        android:text="Oop! You haven't shipping addresses. \nPlease add shipping address"
+        android:textColor="@color/black"
+        android:textSize="18dp" />
 </RelativeLayout>
