--- a/app/src/main/res/layout/line_item_new_list_in_home.xml
+++ b/app/src/main/res/layout/line_item_new_list_in_home.xml
@@ -7,6 +7,7 @@
     android:layout_marginBottom="10dp"
     android:elevation="4dp"
     android:padding="4dp"
+    android:layout_marginStart="5dp"
     android:background="@drawable/border_item"
     android:layout_height="280dp">
 
