--- a/app/src/main/res/layout/bottom_sheet_add_card.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_card.xml
@@ -36,13 +36,14 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView11">
+        android:layout_below="@+id/textView11"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -154,17 +155,17 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/layout_card_type"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                    app:boxBackgroundColor="@color/white"
                     android:layout_width="match_parent"
-                    android:hint="Card type"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="380dp"
-                    android:layout_height="wrap_content">
+                    android:hint="Card type"
+                    app:boxBackgroundColor="@color/white">
 
                     <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                         android:id="@+id/edtTypeCard"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
