--- a/app/src/main/res/layout/line_item_new_list_in_home.xml
+++ b/app/src/main/res/layout/line_item_new_list_in_home.xml
@@ -58,7 +58,7 @@
         app:srcCompat="@drawable/ic_rating" />
 
     <TextView
-        android:id="@+id/tvBranchName"
+        android:id="@+id/tvBrandName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
